# embedded-python-tutorial

./: .gitignore  README.md  fix_scripts.py
source_code/: pyproject.toml
source_code/my_app/: __init__.py
